# University-Algorithms-Data-Structure

./: README.md
Week 1/: CMakeLists.txt  Week 1 - Memory.md  main.c
Week 10/: CMakeLists.txt  Week 10 - Balanced Binary Trees.md  bintree.cpp  bintree.h  bintree_node.cpp  bintree_node.h  bintree_tester.cpp  bintree_tester.h  bintree_writer.cpp  bintree_writer.h  main.cpp
Week 11/: CMakeLists.txt  Week 11 - Heaps.md  heap_tester.cpp  heap_tester.h  main.cpp  maxheap.cpp  maxheap.h  task.cpp  task.h
Week 12/: CMakeLists.txt  Week 12 - Graphs.md  colours.h  graph.cpp  graph.h  main.cpp  simple.dot  visitor.cpp  visitor.h
Week 12/graphs/: act11.graph  act4.graph  act5.graph  act8.graph  cycle.graph
Week 13/: CMakeLists.txt  Week 13 - Shortest Paths.md  colours.h  graph.cpp  graph.h  main.cpp  path_data.cpp  path_data.h  shortest_paths.cpp  shortest_paths.h  shortest_paths_tester.cpp  shortest_paths_tester.h  vertex_heap.cpp  vertex_heap.h
Week 13/graphs/: act6-2.graph  acyclic.graph  cyclic.graph
Week 2/: CMakeLists.txt  Presentation.pptx  Week 2 - Dynamic Arrays.md  main.c
Week 3/: Presentation.pptx  Week 3 - Linked Lists.md  main.c
Week 4/: CMakeLists.txt  main.c
Week 5 /: CMakeLists.txt  Week 5 - Sorting.md  array.c  array.h  list.c  list.h  main.c
Week 6/: CMakeLists.txt  Week 6 - Sets.md  main.c
Week 7/: CMakeLists.txt  Week 7 - Maps.md  alice3.txt
Week 7/LetterCounter/: LangugageRecognizer.c  LangugageRecognizer.h  LetterCounter.c  LetterCounter.h  main_letters.c
Week 7/WordCounter/: Counter.c  Counter.h  main_words.c
Week 8/: CMakeLists.txt  Week 8 - Hashing.md  hashmap.c  hashmap.h  list.c  list.h  main.c
Week 9/: CMakeLists.txt  Presentation.pptx  Week 9 - Binary Trees.md  bintree.cpp  bintree.h  bintree_node.cpp  bintree_node.h  bintree_tester.cpp  bintree_tester.h  bintree_writer.cpp  example.dot  main.cpp
